# uv-detect

./: Cargo.toml  README.md
example_app/: pyproject.toml
example_app/mysite/: settings.py
example_app/quickstart/: views.py
src/: dependency.rs  main.rs  pyproject.rs  uv.rs
src/engine/: evaluator.rs  finder.rs  irregulars.rs  mod.rs  parser.rs  resolver.rs  stdlib.rs
