[package]
name = "uv-detect"
version = "0.1.0"
edition = "2021"

[dependencies]
rustpython-parser = "0.4.0"
walkdir = "2.3"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde_json = "1.0.139"
log = "0.4.26"
simple_logger = "5.0.0"
toml_edit = "0.22.24"
taplo = "0.13.2"
clap = { version = "4.5.31", features = ["derive"] }

[dev-dependencies]
tempfile = "3.2"
